--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
               <div class="fw-bold">Shopee Pay</div>
               Shopee Pay 081292596948 - ADEN SAHWALUDIN
               <br>
-              <img src="img/qr code.jpg" alt="Shopee Pay QR" class="img-thumbnail" width="150" />
+              <img src="img/qr code.jpg" alt="Shopee Pay QR" class="img-thumbnail m-3" width="150" />
             </li>
           </ul>
         </div>
