--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;300;400;600;700&display=swap"
     rel="stylesheet" />
-
   <!-- simplyCountdown -->
   <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
   <script src="countdown/simplyCountdown.min.js"></script>
@@ -331,20 +330,20 @@
       <form class="row row-cols-lg-auto g-3 align-items-center justify-content-center" method="post"
         action="https://script.google.com/macros/s/AKfycbz9aylgd6_fwj22HynTIPW8JJ2ZcBliRX6AUHWmQQjaKiWzMe6up7QMW6dhapGscyhJ4w/exec"
         id="my-form">
-        <div class="col-12">
-          <div class="mb-3">
+        <div class="col-8">
+          <div class="mb-2">
             <label for="nama" class="form-label">Nama</label>
             <input type="nama" class="form-control" id="nama" name="nama" />
           </div>
         </div>
-        <div class="col-12">
-          <div class="mb-3">
+        <div class="col-8">
+          <div class="mb-2">
             <label for="jumlah" class="form-label">Jumlah</label>
             <input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="10" length="1" value="1" />
           </div>
         </div>
-        <div class="col-12">
-          <div class="mb-3">
+        <div class="col-8">
+          <div class="mb-2">
             <label for="status" class="form-label">status</label>
             <select name="status" id="status" class="form-select">
               <option selected>Pilih salah satu</option>
@@ -353,33 +352,28 @@
             </select>
           </div>
         </div>
-        <div class="col-12" style="margin-top: 35px">
+        <div class="col-8" style="margin-top: 35px">
           <button class="btn btn-primary">Kirim</button>
         </div>
       </form>
-
+      <!-- Disqus -->
       <div class="row justify-content-center mt-5">
         <div class="col-md-6">
           <div id="disqus_thread"></div>
           <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-            /*
             var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+              this.page.url = "https://adensahwaludin.github.io";
+              this.page.identifier = "Undangan Pernikahan";
             };
-            */
-            (function () { // DON'T EDIT BELOW THIS LINE
+            (function () {
               var d = document, s = d.createElement('script');
               s.src = 'https://am-wedding-1.disqus.com/embed.js';
               s.setAttribute('data-timestamp', +new Date());
               (d.head || d.body).appendChild(s);
             })();
           </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-              Disqus.</a></noscript>
+          <noscript>Please enable JavaScript to view the <a
+              href="https://disqus.com/?ref_noscript">comments.</a></noscript>
         </div>
       </div>
     </div>
@@ -431,16 +425,16 @@
           </small>
           <ul class="mt-3">
             <li>
-              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="https://instagram.com/_adeen.s" target="_blank"><i class="bi bi-instagram"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.facebook.com/A1270" target="_blank"><i class="bi bi-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://wa.me/6281292596948" target="_blank"><i class="bi bi-whatsapp"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-tiktok"></i></a>
+              <a href="https://t.me/adnsahwaludin" target="_blank"><i class="bi bi-telegram"></i></a>
             </li>
           </ul>
         </div>
@@ -448,6 +442,7 @@
     </div>
   </footer>
 
+  <!-- Audio -->
   <div id="audio-container">
     <audio id="song" autoplay loop>
       <source src="audio/Akad - Payung Teduh.mp3" type="audio/mp3" />
@@ -457,6 +452,7 @@
     </div>
   </div>
 
+  <!-- JavaScript Form -->
   <script>
     window.addEventListener("load", function () {
       const form = document.getElementById("my-form");
@@ -474,26 +470,29 @@
     });
   </script>
 
+  <!-- JavaScript Link URLSearchParams dan Text Ketik-->
   <script>
+
+    //Link URLSearchParams
     const urlParams = new URLSearchParams(window.location.search);
     const nama = urlParams.get("n") || "";
-    const pronoun = urlParams.get("p") || "Bapak/Ibu/Saudara/i";
+    const pronoun = urlParams.get("p") || " Bapak/Ibu/Saudara/i";
     document.querySelector("#nama").value = nama;
 
+    //Text Ketik berhenti
     function typeText(elementId, text, letter = 0) {
       const targetElement = document.getElementById(elementId);
-
       if (letter < text.length) {
         targetElement.innerHTML += text.charAt(letter);
         let speed = Math.floor(Math.random() * 150) + 50;
         setTimeout(() => typeText(elementId, text, letter + 1), speed);
       }
     }
-
     typeText("teksKetik1", `${pronoun} ${nama},`.replace(/ ,$/, ","));
     typeText("teksKetik2", " Akan Melangsungkan Resepsi Pernikahan Dalam: ");
   </script>
 
+  <!-- Text Ketik tidak berhenti -->
   <script>
     var TxtType = function (el, toRotate, period) {
       this.toRotate = toRotate;
@@ -504,7 +503,6 @@
       this.tick();
       this.isDeleting = false;
     };
-
     TxtType.prototype.tick = function () {
       var i = this.loopNum % this.toRotate.length;
       var fullTxt = this.toRotate[i];
@@ -514,16 +512,12 @@
       } else {
         this.txt = fullTxt.substring(0, this.txt.length + 1);
       }
-
       this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
-
       var that = this;
       var delta = 200 - Math.random() * 100;
-
       if (this.isDeleting) {
         delta /= 2;
       }
-
       if (!this.isDeleting && this.txt === fullTxt) {
         delta = this.period;
         this.isDeleting = true;
@@ -532,12 +526,10 @@
         this.loopNum++;
         delta = 500;
       }
-
       setTimeout(function () {
         that.tick();
       }, delta);
     };
-
     window.onload = function () {
       var elements = document.getElementsByClassName("typewrite");
       for (var i = 0; i < elements.length; i++) {
@@ -554,6 +546,8 @@
       document.body.appendChild(css);
     };
   </script>
+
+  <!-- Simply Countdown -->
   <script>
     simplyCountdown(".simply-countdown", {
       year: 2027, // required
@@ -569,20 +563,26 @@
       },
     });
   </script>
+
+  <!-- JavaScript Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- JavaScript Bootstrap lightbox -->
   <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+
+  <!-- Agar tidak bug karena navbar diubah menjadi stickyTop -->
   <script>
     const stickyTop = document.querySelector(".sticky-top");
     const offcanvas = document.querySelector(".offcanvas");
-
     offcanvas.addEventListener("show.bs.offcanvas", function () {
       stickyTop.style.overflow = "visible";
     });
-
     offcanvas.addEventListener("hidden.bs.offcanvas", function () {
       stickyTop.style.overflow = "hidden";
     });
   </script>
+
+  <!-- Disable scroll dan icon audio fixed -->
   <script>
     const rootElement = document.querySelector(":root");
     const audioIconWrapper = document.querySelector(".audio-icon-wrapper");
@@ -625,37 +625,17 @@
         audioIcon.classList.add("bi-disc");
         audioIcon.classList.remove("bi-pause-circle");
       }
-
+      //Agar bisa diklik berkali-kali 
       isPlaying = !isPlaying;
     };
 
     //      if (!localStorage.getItem("udahPernahKebuka")) {
     //       disableScroll();
     //   }
+    // Agar pertama kali dibuka tidak bisa discroll
     disableScroll();
   </script>
 
-  <script>
-    // Select the navbar element
-    const navbar = document.querySelector(".mynavbar");
-
-    // Function to change navbar background color on scroll
-    function changeNavbarColor() {
-      const blackBackgroundThreshold = 100; // Adjust this value as needed
-
-      if (window.scrollY >= blackBackgroundThreshold) {
-        navbar.style.backgroundColor = "black"; // Change to your desired color
-      } else {
-        navbar.style.backgroundColor = "rgba(255, 255, 255, 0.8)"; // Default color
-      }
-    }
-
-    // Attach the scroll event listener
-    window.addEventListener("scroll", changeNavbarColor);
-
-    // Call the function once on page load (in case the page is initially scrolled)
-    changeNavbarColor();
-  </script>
 </body>
 
 </html>
